@@ -1,8 +1,11 @@
 FROM openjdk:11
+
 ARG JAR_FILE
+COPY ${JAR_FILE} app.jar
 
 
-EXPOSE 8585
+# Définition de l'encodage de l'environnement à UTF-8
+ENV LANG=C.UTF-8
 
-COPY ${JAR_FILE} nabu.jar
-CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "nabu.jar"]
+# Commande pour lancer l'application Spring Boot
+ENTRYPOINT exec java -jar /app.jar
